Flex-basis to ensure sizing of boxes near equivalent and aligning the text to the center of the widget

--- a/content/css/app.less
+++ b/content/css/app.less
@@ -274,7 +274,7 @@
 
 .metric-widget,
 .metric-detail {
-    display: inline-block;
+    display: inline-flex;
     padding: 0px;
     background-color: @color-deep-slate;
 }
@@ -283,13 +283,13 @@
     padding: 5px 2px 5px 2px;
     border: 0px #000;
     width: 100%;
-    vertical-align: top;
     background-color: @color-deep-slate;
     color: @color-lighter-slate;
 }
 
 .metric-widget {
     flex: auto;
+    flex-basis: 125px;
     border: 1px solid @color-slate;
 }
 
